@CloudServer: fixing "top menu items not showing (on load, before resize)" bug.

--- a/trunk/CloudServer/assets/htdocs/css/cf.head.panel.css
+++ b/trunk/CloudServer/assets/htdocs/css/cf.head.panel.css
@@ -1,4 +1,4 @@
-//html, body, {margin:0px;padding:0px; width:100%}
+html, body, {margin:0px;padding:0px; width:100%; text-align: left;}
 .nav{
 	margin:0px;
 	padding:0px;
@@ -6,6 +6,7 @@
 	overflow:hidden;
 	height:40px;
 	width:100%;
+	text-align: left;
 }
 .nav li, #moreMenu li{
 	list-style-type: none;
@@ -65,4 +66,5 @@ text-decoration:none;
 	}
 	.header .hidden-c{
 	display: none;
+	text-align: left;
 	}
